--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -1,9 +1,10 @@
 @media (min-width: 700px) {
   body {
-    display: unset;
+    display: block;
     flex-direction: unset;
     justify-content: unset;
   }
+
   .desktop-logo {
     display: block;
   }
